--- a/Geopelia/App.xaml
+++ b/Geopelia/App.xaml
@@ -3,5 +3,5 @@
                              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                              xmlns:local="using:Geopelia"
                              xmlns:prism="using:Prism.Unity.Windows"
-                             RequestedTheme="Light">
+                             RequestedTheme="Dark">
 </prism:PrismUnityApplication>
