[modify] お気に入りを登録/解除できるよう実装

--- a/Geopelia/Views/MainPage.xaml
+++ b/Geopelia/Views/MainPage.xaml
@@ -128,7 +128,7 @@
                     <Button Grid.Column="2"
                             Background="Transparent"
                             HorizontalAlignment="Center"
-                            Tapped="{x:Bind AddFavorite}">
+                            Tapped="{x:Bind ChangeIsFavorited}">
                         <SymbolIcon Symbol="Favorite"
                                     Foreground="{x:Bind FavoriteForground.Value, Mode=OneWay}" />
                     </Button>
@@ -255,7 +255,7 @@
                                    VerticalAlignment="Center"
                                    HorizontalAlignment="Center">
 							   <Run Text="{x:Bind ViewModel.MyProfile.Value.Status.FavoriteCount}" />
-						      <Run Text="Favorites" />
+						      <Run Text="ChangeFavorites" />
                         </TextBlock>
                     </Grid>
                 </Grid>
