[modify] ストリーミングメッセージをそのまま確保する方法から、中身の Status を取り出して確保する方法に変更

--- a/Geopelia/Views/MainPage.xaml
+++ b/Geopelia/Views/MainPage.xaml
@@ -51,7 +51,7 @@
                         BorderBrush="White">
                     <Border.Background>
                         <ImageBrush Stretch="None"
-                                    ImageSource="{x:Bind TweetModel.Value.TweetStatusMessage.Status.User.ProfileImageUrlHttps}" />
+                                    ImageSource="{x:Bind TweetModel.Value.TweetStatus.User.ProfileImageUrlHttps}" />
                     </Border.Background>
                     <Ellipse Visibility="{x:Bind ProtectedVisibility.Value, Mode=OneTime}"
                              HorizontalAlignment="Right"
