[wip] ツイート表示用カスタムコントロール改修中 ・ツイートの改行を実装 ・ツイート表示をリツイートに対応 ・ツイートに含まれる URL を 表示用 URL に変更

--- a/Geopelia/Themes/Generic.xaml
+++ b/Geopelia/Themes/Generic.xaml
@@ -7,7 +7,8 @@
             <Setter.Value>
                 <ControlTemplate TargetType="fragments:TweetTextBlock">
                     <TextBlock x:Name="PART_TextBlock"
-                               Style="{ThemeResource BodyTextBlockStyle}" />
+                               Style="{ThemeResource BodyTextBlockStyle}"
+                               TextWrapping="Wrap" />
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
