[modify] ツイート作成画面に遷移したらツイート入力眼のカーソル位置が末尾にセットされているようにした close #6

--- a/Geopelia/Views/TweetCreatePage.xaml
+++ b/Geopelia/Views/TweetCreatePage.xaml
@@ -30,7 +30,9 @@
                  PlaceholderText="Tweet..."
                  Text="{x:Bind ViewModel.TweetText.Value, Mode=TwoWay}"
                  TextChanged="{x:Bind ViewModel.CheckInputKey}"
-                 TextWrapping="Wrap" />
+                 TextWrapping="Wrap"
+                 IsSpellCheckEnabled="False"
+                 GotFocus="{x:Bind ViewModel.MoveCaretToLast}" />
         <ItemsControl Grid.Row="2"
                       Grid.ColumnSpan="2"
                       HorizontalAlignment="Left"
